* System logs can be viewed from the Admin interface. Navigate to [breadcrumb]#System -> Log# to view and download the system logs.
** This feature is available in the UI and via a new API.
** Resolves https://github.com/FusionAuth/fusionauth-issues/issues/540[GitHub Issue #540]
* There is a Test SMTP button that you can utilize during an Edit or Add Tenant operation to ensure the correct SMTP configuration.
** Resolves https://github.com/FusionAuth/fusionauth-issues/issues/539[GitHub Issue #539]
* Production runtime mode disables maintenance mode, database migrations must be applied manually in this runtime mode.  See the link:/docs/v1/tech/installation-guide/fusionauth-app#runtime-modes[FusionAuth App Installation Guide] documentation for reference.
* Advanced configuration exposed for search engine type, runtime mode, and Same-Site cookie policy.  See the link:/docs/v1/tech/reference/configuration[Configuration] documentation for reference.
* JWT Refresh webhook event, issued when an access token is refreshed by refresh token, see the link:/docs/v1/tech/events-webhooks/events#jwt-refresh[Events] documentation for reference.
* Tenant email configuration provides a default from email and a default from name. See the link:/docs/v1/tech/apis/tenants#create-a-tenant[Tenants API] documentation for reference.
** Resolves https://github.com/FusionAuth/fusionauth-issues/issues/262[GitHub Issue #262], thanks to https://github.com/engineertdog[@engineertdog] for the request!

=== Docker
* Next time a release candidate is built, the `latest` tag will be preserved to always be the latest stable release. This way if you are always using the `latest` tag you will not automatically upgrade to a release candidate.
** Resolves https://github.com/FusionAuth/fusionauth-issues/issues/596[GitHub Issue #596], thanks to https://github.com/ceefour[@ceefour] for the request.

=== Internal