@@ -97,6 +97,7 @@
                     <li {% if page.url == "/docs/v1/tech/apis/registrations.html" %}class="active"{% endif %}><a href="/docs/v1/tech/apis/registrations">Registrations</a></li>
                     <li {% if page.url == "/docs/v1/tech/apis/reports.html" %}class="active"{% endif %}><a href="/docs/v1/tech/apis/reports">Reports</a></li>
                     <li {% if page.url == "/docs/v1/tech/apis/system.html" %}class="active"{% endif %}><a href="/docs/v1/tech/apis/system">System</a></li>
+                    <li {% if page.url == "/docs/v1/tech/apis/system-logs.html" %}class="active"{% endif %}><a href="/docs/v1/tech/apis/system-logs">System Logs</a></li>
                     <li {% if page.url == "/docs/v1/tech/apis/tenants.html" %}class="active"{% endif %}><a href="/docs/v1/tech/apis/tenants">Tenants</a></li>
                     <li {% if page.url == "/docs/v1/tech/apis/themes.html" %}class="active"{% endif %}><a href="/docs/v1/tech/apis/themes">Themes</a></li>
                     <li {% if page.url == "/docs/v1/tech/apis/two-factor.html" %}class="active"{% endif %}><a href="/docs/v1/tech/apis/two-factor">Two Factor</a></li>
