@@ -1,0 +1,5 @@
+{
+  "dateTimeSecondsFormat": "M/d/yyyy hh:mm:ss a z",
+  "zoneId": "America/Denver",
+  "lastNBytes": -1
+}
