@@ -1,0 +1,28 @@
+==== Request Body
+
+[.api]
+[field]#dateTimeSecondsFormat# [type]#[String]#  [optional]#Optional# [default]#defaults to **[see description]**#::
+The format string used to format the date and time columns in the export result.
++
+When this parameter is omitted a default format of `M/d/yyyy hh:mm:ss a z` will be used. See the https://docs.oracle.com/javase/8/docs/api/java/time/format/DateTimeFormatter.html[DateTimeFormatter patterns] for additional examples.
+
+[field]#lastNBytes# [type]#[Long]# [optional]#Optional# [default]#defaults to `65793`#::
+The number of bytes to retrieve from the end of each of the system logs.  When this value is `-1`, the entire log will be downloaded.
+
+[field]#zoneId# [type]#[String]# [optional]#Optional# [default]#defaults to **[see description]**#::
+The link:/docs/v1/tech/reference/data-types#time-zone[time zone] used to adjust the stored UTC time in the export result.
++
+For example:
++
+[quote]
+`America/Denver` or `US/Mountain`
++
+&nbsp;
++
+When this parameter is omitted the configured default report time zone will be used. See [field]#reportTimezone# in the link:../apis/system[System Configuration API].
+
+[source,json]
+.Example Request JSON
+----
+include::../../../src/json/system-logs/post-request.json[]
+----
