@@ -1,7 +1,7 @@
 ---
 layout: doc
 title: Audit Logs
-description: The APIs for add entries to and searching the audit log
+description: The APIs for adding entries to, searching, and exporting the audit log
 ---
 
 == Overview
