@@ -34,31 +34,32 @@ Content-Type: application/json
 The APIs are grouped into the following categories.
 
 * link:actioning-users[Actioning Users] - These APIs allow you to take actions on Users or modify previous actions (CRUD operations).
-* link:applications[Applications] - Create, Retrieve, Update and Delete Applications and Application Roles
-* link:audit-logs[Audit Logs] - These APIs allow you create, retrieve, search and export the Audit Log.
+* link:applications[Applications] - These APIs allow you to create, retrieve, update and delete Applications and Application Roles
+* link:audit-logs[Audit Logs] - These APIs allow you to create, retrieve, search and export the Audit Log.
 * link:consent[Consent] - These APIs allow you to manage Consent (CRUD operations).
-* link:emails[Email] - These APIs allow you both manage Email Templates (CRUD operations) as well as send emails to Users.
-* link:event-logs[Event Logs] - These APIs allow you retrieve and search event logs.
+* link:emails[Email] - These APIs allow you to both manage Email Templates (CRUD operations) as well as send emails to Users.
+* link:event-logs[Event Logs] - These APIs allow you to retrieve and search event logs.
 * link:families[Families] - These APIs allow you to manage Families (CRUD operations).
 * link:groups[Groups] - These APIs allow you to manage Groups (CRUD operations) as well Group membership.
-* link:identity-providers/[Identity Providers] - These APIs allow you manage Identity Providers for federating logins.
+* link:identity-providers/[Identity Providers] - These APIs allow you to manage Identity Providers for federating logins.
 * link:integrations[Integrations] - These APIs allow you to manage FusionAuth integrations such as Kafka, Twilio and CleanSpeak.
 * link:jwt[JSON Web Tokens] - These APIs allow you to manage Refresh Tokens, verify Access Tokens and retrieve public keys used for verifying JWT signatures.
 * link:keys[Keys] - These APIs allow you to manage cryptographic keys (CRUD operations).
 * link:lambdas[Lambdas] - These APIs allow you to manage Lambdas (CRUD operations).
-* link:login[Login] - These APIs allow you authenticate Users.
-* link:passwordless[Passwordless] - These APIs allow you authenticate Users without a password.
+* link:login[Login] - These APIs allow you to authenticate Users.
+* link:passwordless[Passwordless] - These APIs allow you to authenticate Users without a password.
 * link:registrations[Registration] - These APIs allow you to manage the relationship between Users and Applications, also known as Registrations (CRUD operations).
-* link:reports[Reports] - These APIs allow you retrieve reporting information from FusionAuth.
+* link:reports[Reports] - These APIs allow you to retrieve reporting information from FusionAuth.
 * link:system[System] - These APIs allow you to retrieve and update the system configuration and retrieve system status.
+* link:system-logs[System Logs] - These APIs allow you to export the System Log.
 * link:tenants[Tenants] - These APIs allow you to manage Tenants (CRUD operations).
 * link:themes[Themes] - These APIs allow you to manage Themes (CRUD operations).
 * link:two-factor[Two Factor] - This API provides allow you to enable and disable Two Factor on a user.
-* link:users[Users] - Create, Retrieve, Update and Delete Users, Search for Users, Bulk Import and Password Management
+* link:users[Users] - These APIs allow you to create, retrieve, update and delete Users, Search for Users, Bulk Import and Password Management
 * link:user-actions[User Actions] - These APIs allow you to manage User Actions which are the definitions of actions that can be taken on Users (CRUD operations).
 * link:user-action-reasons[User Action Reasons] - These APIs allow you to manage User Action Reasons which are used when you action Users (CRUD operations).
-* link:user-comments[User Comments] - These APIs allow retrieve or create comments on Users.
-* link:webhooks[Webhooks] - These APIs allow you manage Webhooks (CRUD operations).
+* link:user-comments[User Comments] - These APIs allow you to retrieve or create comments on Users.
+* link:webhooks[Webhooks] - These APIs allow you to manage Webhooks (CRUD operations).
 
 .{nbsp} +
 
