@@ -1,0 +1,77 @@
+---
+layout: doc
+title: System Logs
+description: APIs for exporting the system logs
+---
+
+== Overview
+
+This page contains the APIs that are used for exporting the system logs.
+
+* <<Export System Logs>>
+
+== Export System Logs
+
+[NOTE.since]
+====
+Available Since Version 1.16.0
+====
+
+This API is used to export the System Logs, the response will be a compressed zip archive.
+
+=== Request
+
+[.api-authentication]
+link:authentication#api-key-authentication[icon:lock[role=red,type=fas]] Export the System Logs
+[.endpoint]
+.URI
+--
+[method]#GET# [uri]#/api/system/log/export``?dateTimeSecondsFormat=\{dateTimeSecondsFormat\}&lastNBytes=\{lastNBytes\}&zoneId=\{zoneId\}``#
+--
+
+When calling the API using a `GET` request you will send the export criteria on the URL using request parameters.
+
+==== Request Parameters
+
+[.api]
+[field]#dateTimeSecondsFormat# [type]#[String]#  [optional]#Optional# [default]#defaults to **[see description]**#::
+The format string used to format the date and time columns in the export result.
++
+When this parameter is omitted a default format of `M/d/yyyy hh:mm:ss a z` will be used. See the https://docs.oracle.com/javase/8/docs/api/java/time/format/DateTimeFormatter.html[DateTimeFormatter patterns] for additional examples.
+
+[field]#lastNBytes# [type]#[Long]# [optional]#Optional# [default]#defaults to `65793`#::
+The number of bytes to retrieve from the end of each of the system logs.  When this value is `-1`, the entire log will be downloaded.
+
+[field]#zoneId# [type]#[String]# [optional]#Optional# [default]#defaults to **[see description]**#::
+The link:/docs/v1/tech/reference/data-types#time-zone[time zone] used to adjust the stored UTC time in the export result.
++
+For example:
++
+[quote]
+`America/Denver` or `US/Mountain`
++
+&nbsp;
++
+When this parameter is omitted the configured default report time zone will be used. See [field]#reportTimezone# in the link:../apis/system[System Configuration API].
+
+[.api-authentication]
+link:authentication#api-key-authentication[icon:lock[role=red,type=fas]] Export the System Logs
+[.endpoint]
+.URI
+--
+[method]#POST# [uri]#/api/system/system-log/export#
+--
+
+When calling the API using a `POST` request you will send the export criteria in a JSON request body.
+
+include::docs/v1/tech/apis/_system-logs-request-body.adoc[]
+
+=== Response
+
+The response for this API will contain a compressed zip of the system logs.
+
+:success_code: 200
+:success_message: pass:normal[The request was successful. The response will be a compressed archive byte stream with a `Content-Type` of `application/zip`.]
+include::docs/v1/tech/apis/_standard-get-response-codes.adoc[]
+:success_code!:
+:success_message!:
