@@ -92,6 +92,7 @@ include::docs/v1/tech/__general-migration-warning.adoc[]
 * System logs can be viewed from the Admin interface. Navigate to [breadcrumb]#System -> Log# to view and download the system logs.
 ** This feature is available in the UI and via a new API.
 ** Resolves https://github.com/FusionAuth/fusionauth-issues/issues/540[GitHub Issue #540]
+* System log export API has been added for retrieving a node's system logs as a compressed zip file.  See the link:/docs/v1/tech/apis/system-logs[System Logs API] documentation for reference.
 * There is a Test SMTP button that you can utilize during an Edit or Add Tenant operation to ensure the correct SMTP configuration.
 ** Resolves https://github.com/FusionAuth/fusionauth-issues/issues/539[GitHub Issue #539]
 * Production runtime mode disables maintenance mode, database migrations must be applied manually in this runtime mode.  See the link:/docs/v1/tech/installation-guide/fusionauth-app#runtime-modes[FusionAuth App Installation Guide] documentation for reference.
